<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/users_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_search_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/buscar_usuario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_search_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionSearch"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/sw_only_active_users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solo_activos"
        android:layout_marginTop="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_users"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:paddingBottom="72dp"
        android:overScrollMode="ifContentScrolls"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/empty_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sin_resultados"
        android:gravity="center"
        android:visibility="gone"
        android:padding="24dp"/>

</LinearLayout>
